--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+	<title>Home Page</title>
+</head>
 <body>
-<h1>Tyler Hawkins</h1>
+	<h1>Tyler Hawkins</h1>
+	<p>This is a paragraph</p>
 </body>
 </html>
