fixing image source links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Tyler Hawkins</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="script.js"></script>
   </head>
   
@@ -37,75 +37,75 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Adoptly/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Adoptly.png" /></a>
+          <a href="/Adoptly/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Adoptly.png" /></a>
           <p>Adoptly</p>
         </div>
         <div class="col-md-4">
-          <a href="/Armando/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Armando.png" /></a>
+          <a href="/Armando/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Armando.png" /></a>
           <p>Armando Perez</p>
         </div>
         <div class="col-md-4">
-          <a href="/Bass/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Bass.png" /></a>
+          <a href="/Bass/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Bass.png" /></a>
           <p>Bass</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/BestBite/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/BestBite.png" /></a>
+          <a href="/BestBite/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestBite.png" /></a>
           <p>BestBite</p>
         </div>
         <div class="col-md-4">
-          <a href="/BoltNetwork/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/BoltNetwork.png" /></a>
+          <a href="/BoltNetwork/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BoltNetwork.png" /></a>
           <p>Bolt Network</p>
         </div>
         <div class="col-md-4">
-          <a href="/Broadway/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Broadway.png" /></a>
+          <a href="/Broadway/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Broadway.png" /></a>
           <p>Broadway</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Excursion/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Excursion.png" /></a>
+          <a href="/Excursion/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Excursion.png" /></a>
           <p>Excursion</p>
         </div>
         <div class="col-md-4">
-          <a href="/Headlines/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Headlines.png" /></a>
+          <a href="/Headlines/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Headlines.png" /></a>
           <p>Headlines</p>
         </div>
         <div class="col-md-4">
-          <a href="/InnovationCloud/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/InnovationCloud.png" /></a>
+          <a href="/InnovationCloud/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/InnovationCloud.png" /></a>
           <p>Innovation Cloud</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Junction/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Junction.png" /></a>
+          <a href="/Junction/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Junction.png" /></a>
           <p>Junction</p>
         </div>
         <div class="col-md-4">
-          <a href="/MOVE/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/MOVE.png" /></a>
+          <a href="/MOVE/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MOVE.png" /></a>
           <p>MOVE</p>
         </div>
         <div class="col-md-4">
-          <a href="/Newsroom/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Newsroom.png" /></a>
+          <a href="/Newsroom/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Newsroom.png" /></a>
           <p>NewsRoom</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Pocketbook/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Pocketbook.png" /></a>
+          <a href="/Pocketbook/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pocketbook.png" /></a>
           <p>Pocketbook</p>
         </div>
         <div class="col-md-4">
-          <a href="/RedEyePhotography/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/RedEyePhotography.png" /></a>
+          <a href="/RedEyePhotography/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedEyePhotography.png" /></a>
           <p>Red Eye Photography</p>
         </div>
         <div class="col-md-4">
-          <a href="/Shutterbugg/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Shutterbugg.png" /></a>
+          <a href="/Shutterbugg/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Shutterbugg.png" /></a>
           <p>Shutterbugg</p>
         </div>
       </div>
@@ -113,9 +113,9 @@
     </div>
 
     <div class="separator">
-      <a href="#games"><img src="/Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="/Images/home.png" alt="Home" /></a>
-      <a href="#webDesign"><img src="/Images/up.png" alt="Up Arrow" /></a>
+      <a href="#games"><img src="Images/down.png" alt="Down Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#webDesign"><img src="Images/up.png" alt="Up Arrow" /></a>
     </div>
 
     <div class="container" id="applications">
@@ -124,30 +124,30 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/CamperNews/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/CamperNews.png" /></a>
+          <a href="/CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" /></a>
           <p>Camper News</p>
         </div>
         <div class="col-md-4">
-          <a href="/Weather/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Weather.png" /></a>
+          <a href="/Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" /></a>
           <p>Current Local Weather</p>
         </div>
         <div class="col-md-4">
-          <a href="/TwitchTV/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/TwitchTV.png" /></a>
+          <a href="/TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" /></a>
           <p>Twitch TV Streamers</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/JSCalculator/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/JSCalculator.png" /></a>
+          <a href="/JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" /></a>
           <p>JavaScript Calculator</p>
         </div>
         <div class="col-md-4">
-          <a href="/PomodoroTimer/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/PomodoroTimer.png" /></a>
+          <a href="/PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" /></a>
           <p>Pomodoro Timer</p>
         </div>
         <div class="col-md-4">
-          <a href="/QuoteGenerator/" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/QuoteGenerator.png" /></a>
+          <a href="/QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" /></a>
           <p>Quote Generator</p>
         </div>
       </div>
@@ -155,9 +155,9 @@
     </div>
 
     <div class="separator">
-      <a href="#about"><img src="/Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="/Images/home.png" alt="Home" /></a>
-      <a href="#applications"><img src="/Images/up.png" alt="Up Arrow" /></a>
+      <a href="#about"><img src="Images/down.png" alt="Down Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#applications"><img src="Images/up.png" alt="Up Arrow" /></a>
     </div>
 
     <div class="container" id="games">
@@ -166,45 +166,45 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_3wTHewyrusxK2Oh" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/DuckHunt.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_3wTHewyrusxK2Oh" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DuckHunt.png" /></a>
           <p>Duck Hunt</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0qgiRH7WiDPcY85" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/QrappyBird.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_0qgiRH7WiDPcY85" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" /></a>
           <p>Qrappy Bird</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe3/form/SV_bCb70NimhKVGTQx" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Mario.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe3/form/SV_bCb70NimhKVGTQx" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Mario.png" /></a>
           <p>Super Mario</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_1XPigC1TkHGKoQd" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Piano.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_1XPigC1TkHGKoQd" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Piano.png" /></a>
           <p>Piano</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0JIvWm8RbmXt6gl" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Canvas.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_0JIvWm8RbmXt6gl" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Canvas.png" /></a>
           <p>Canvas Animation</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_cOuJWi5eQMIVFbf" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Connect4.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_cOuJWi5eQMIVFbf" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Connect4.png" /></a>
           <p>Connect Four</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_6eVuJ3bE4daIavb" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/DotChaser.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_6eVuJ3bE4daIavb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DotChaser.png" /></a>
           <p>Dot Chaser</p>
         </div>
         <div class="col-md-4">
-          <a href="https://social.az1.qualtrics.com/SE/?SID=SV_eM22ltCMYQg2WB7" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Dino.png" /></a>
+          <a href="https://social.az1.qualtrics.com/SE/?SID=SV_eM22ltCMYQg2WB7" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Dino.png" /></a>
           <p>Dinosaur Park Survey</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="/Images/Thumbnails/Squarexploder.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" /></a>
           <p>Squarexploder</p>
         </div>
       </div>
@@ -212,9 +212,9 @@
     </div>
 
     <div class="separator">
-      <a href="#skills"><img src="/Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="/Images/home.png" alt="Home" /></a>
-      <a href="#games"><img src="/Images/up.png" alt="Up Arrow" /></a>
+      <a href="#skills"><img src="Images/down.png" alt="Down Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#games"><img src="Images/up.png" alt="Up Arrow" /></a>
     </div>
 
     <div class="container" id="about">
@@ -225,9 +225,9 @@
     </div>
 
     <div class="separator">
-      <a href="#work"><img src="/Images/down.png" alt="Down Arrow" /></a>
-      <a href="#home"><img src="/Images/home.png" alt="Home" /></a>
-      <a href="#about"><img src="/Images/up.png" alt="Up Arrow" /></a>
+      <a href="#work"><img src="Images/down.png" alt="Down Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#about"><img src="Images/up.png" alt="Up Arrow" /></a>
     </div>
 
     <div class="container" id="skills">
@@ -289,8 +289,8 @@
     </div>
 
     <div class="separator">
-      <a href="#home"><img src="/Images/home.png" alt="Home" /></a>
-      <a href="#skills"><img src="/Images/up.png" alt="Up Arrow" /></a>
+      <a href="#home"><img src="Images/home.png" alt="Home" /></a>
+      <a href="#skills"><img src="Images/up.png" alt="Up Arrow" /></a>
     </div>
 
     <div class="container" id="work">
