--- a/index.html
+++ b/index.html
@@ -37,75 +37,75 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Adoptly/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Adoptly.png" /></a>
+          <a href="Adoptly/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Adoptly.png" /></a>
           <p>Adoptly</p>
         </div>
         <div class="col-md-4">
-          <a href="/Armando/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Armando.png" /></a>
+          <a href="Armando/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Armando.png" /></a>
           <p>Armando Perez</p>
         </div>
         <div class="col-md-4">
-          <a href="/Bass/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Bass.png" /></a>
+          <a href="Bass/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Bass.png" /></a>
           <p>Bass</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/BestBite/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestBite.png" /></a>
+          <a href="BestBite/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestBite.png" /></a>
           <p>BestBite</p>
         </div>
         <div class="col-md-4">
-          <a href="/BoltNetwork/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BoltNetwork.png" /></a>
+          <a href="BoltNetwork/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BoltNetwork.png" /></a>
           <p>Bolt Network</p>
         </div>
         <div class="col-md-4">
-          <a href="/Broadway/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Broadway.png" /></a>
+          <a href="Broadway/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Broadway.png" /></a>
           <p>Broadway</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Excursion/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Excursion.png" /></a>
+          <a href="Excursion/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Excursion.png" /></a>
           <p>Excursion</p>
         </div>
         <div class="col-md-4">
-          <a href="/Headlines/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Headlines.png" /></a>
+          <a href="Headlines/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Headlines.png" /></a>
           <p>Headlines</p>
         </div>
         <div class="col-md-4">
-          <a href="/InnovationCloud/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/InnovationCloud.png" /></a>
+          <a href="InnovationCloud/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/InnovationCloud.png" /></a>
           <p>Innovation Cloud</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Junction/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Junction.png" /></a>
+          <a href="Junction/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Junction.png" /></a>
           <p>Junction</p>
         </div>
         <div class="col-md-4">
-          <a href="/MOVE/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MOVE.png" /></a>
+          <a href="MOVE/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MOVE.png" /></a>
           <p>MOVE</p>
         </div>
         <div class="col-md-4">
-          <a href="/Newsroom/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Newsroom.png" /></a>
+          <a href="Newsroom/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Newsroom.png" /></a>
           <p>NewsRoom</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/Pocketbook/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pocketbook.png" /></a>
+          <a href="Pocketbook/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pocketbook.png" /></a>
           <p>Pocketbook</p>
         </div>
         <div class="col-md-4">
-          <a href="/RedEyePhotography/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedEyePhotography.png" /></a>
+          <a href="RedEyePhotography/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedEyePhotography.png" /></a>
           <p>Red Eye Photography</p>
         </div>
         <div class="col-md-4">
-          <a href="/Shutterbugg/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Shutterbugg.png" /></a>
+          <a href="Shutterbugg/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Shutterbugg.png" /></a>
           <p>Shutterbugg</p>
         </div>
       </div>
@@ -124,30 +124,30 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" /></a>
+          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" /></a>
           <p>Camper News</p>
         </div>
         <div class="col-md-4">
-          <a href="/Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" /></a>
+          <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" /></a>
           <p>Current Local Weather</p>
         </div>
         <div class="col-md-4">
-          <a href="/TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" /></a>
+          <a href="TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" /></a>
           <p>Twitch TV Streamers</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="/JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" /></a>
+          <a href="JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" /></a>
           <p>JavaScript Calculator</p>
         </div>
         <div class="col-md-4">
-          <a href="/PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" /></a>
+          <a href="PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" /></a>
           <p>Pomodoro Timer</p>
         </div>
         <div class="col-md-4">
-          <a href="/QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" /></a>
+          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" /></a>
           <p>Quote Generator</p>
         </div>
       </div>
