fix styles for skills

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="row">
         <p>SAS</p>
         <p>C++</p>
-        <p>The Command Line</p>
+        <p>Bash</p>
       </div>
 
       <div class="row">
@@ -304,13 +304,13 @@
       </div>
 
       <div class="row">
-        <p>WEB DESIGNER</p>
+        <p>WEB DESIGNER - DESIGN TEAM</p>
         <p>Qualtrics</p>
         <p>June 2015 - present</p>
       </div>
 
       <div class="row">
-        <p>PRODUCT SPECIALIST</p>
+        <p>PRODUCT SPECIALIST - TECHNICAL SUPPORT</p>
         <p>Qualtrics</p>
         <p>April 2014 - October 2015</p>
       </div>
