--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="nav">
       <div class="container">
-      	<ul>
+        <ul>
           <li><a href="#webDesign">WEBSITE DESIGNS</a></li>
           <li><a href="#applications">APPLICATIONS</a></li>
           <li><a href="#games">GAMES</a></li>
@@ -237,53 +237,16 @@
       <h4 id="hard">HARD SKILLS</h4>
 
       <div class="row">
-        <p>HTML 5</p>
-        <p>CSS 3</p>
-        <p>JavaScript</p>
-      </div>
-
-      <div class="row">
-        <p>jQuery</p>
-        <p>PHP</p>
-        <p>SQL</p>
-      </div>
-
-      <div class="row">
-        <p>Python</p>
-        <p>Ruby</p>
-        <p>R</p>
-      </div>
-
-      <div class="row">
-        <p>SAS</p>
-        <p>C++</p>
-        <p>Bash</p>
-      </div>
-
-      <div class="row">
-        <p>Git</p>
-        <p>Bootstrap</p>
-        <p>Wordpress</p>
+        <p><span>Front End: </span>HTML5, CSS3, JavaScript, jQuery, Bootstrap, Wordpress</p>
+        <p><span>Back End: </span>PHP, Python, Ruby, C++</p>
+        <p><span>Data Manipulation: </span>SQL, R, SAS</p>
+        <p><span>Other: </span>REST API, Bash, Git, myPHPAdmin, mySQL Databases</p>
       </div>
 
       <h4 id="soft">SOFT SKILLS</h4>
 
       <div class="row">
-        <p>Self-motivated</p>
-        <p>Problem solver</p>
-        <p>Great communciator</p>
-      </div>
-
-      <div class="row">
-        <p>Hard worker</p>
-        <p>Quick learner</p>
-        <p>Team player</p>
-      </div>
-
-      <div class="row">
-        <p>Dependable</p>
-        <p>Driven</p>
-        <p>Detail-oriented</p>
+        <p>Self-motivated, Problem solver, Great communciator, Hard worker, Quick learner, Team player, Dependable, Detail-oriented, Driven</p>
       </div>
 
     </div>
