DOM manipulation for requirement

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <div class="header" id="home">
-      <h1>TYLER HAWKINS</h1>
+      <h1 id="myName">TYLER HAWKINS</h1>
       <p>thawkin3@byu.net</p>
       <p>404.940.1358</p>
     </div>
