--- a/index.html
+++ b/index.html
@@ -245,8 +245,18 @@
 
       <h4 id="soft">SOFT SKILLS</h4>
 
-      <div class="row">
-        <p>Self-motivated, Problem solver, Great communciator, Hard worker, Quick learner, Team player, Dependable, Detail-oriented, Driven</p>
+      <div class="row" id="softRow">
+        <ul>
+          <li>Self-motivated</li>
+          <li>Problem solver</li>
+          <li>Great communciator</li>
+          <li>Hard worker</li>
+          <li>Quick learner</li>
+          <li>Team player</li>
+          <li>Dependable</li>
+          <li>Detail-oriented</li>
+          <li>Driven</li>
+        </ul>
       </div>
 
     </div>
