adding thumbnails and Wikipedia viewer

--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-4">
+          <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" /></a>
+          <p>Wikipedia Search Engine</p>
+        </div>
+      </div>
+
     </div>
 
     <div class="separator">
@@ -206,6 +213,17 @@
         <div class="col-md-4">
           <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" /></a>
           <p>Squarexploder</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" /></a>
+          <p>Click the Dot</p>
+        </div>
+        <div class="col-md-4">
+          <a href="GrowingBubbles.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" /></a>
+          <p>Growing Bubbles</p>
         </div>
       </div>
 
