adding alt tags to images

--- a/index.html
+++ b/index.html
@@ -37,75 +37,75 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="Adoptly/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Adoptly.png" /></a>
+          <a href="Adoptly/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Adoptly.png" alt="Adoptly" /></a>
           <p>Adoptly</p>
         </div>
         <div class="col-md-4">
-          <a href="Armando/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Armando.png" /></a>
+          <a href="Armando/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Armando.png" alt="Armando" /></a>
           <p>Armando Perez</p>
         </div>
         <div class="col-md-4">
-          <a href="Bass/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Bass.png" /></a>
+          <a href="Bass/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Bass.png" alt="Bass" /></a>
           <p>Bass</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="BestBite/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestBite.png" /></a>
+          <a href="BestBite/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BestBite.png" alt="BestBite" /></a>
           <p>BestBite</p>
         </div>
         <div class="col-md-4">
-          <a href="BoltNetwork/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BoltNetwork.png" /></a>
+          <a href="BoltNetwork/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/BoltNetwork.png" alt="Bolt Network" /></a>
           <p>Bolt Network</p>
         </div>
         <div class="col-md-4">
-          <a href="Broadway/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Broadway.png" /></a>
+          <a href="Broadway/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Broadway.png" alt="Broadway" /></a>
           <p>Broadway</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="Excursion/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Excursion.png" /></a>
+          <a href="Excursion/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Excursion.png" alt="Excursion" /></a>
           <p>Excursion</p>
         </div>
         <div class="col-md-4">
-          <a href="Headlines/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Headlines.png" /></a>
+          <a href="Headlines/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Headlines.png" alt="Headlines" /></a>
           <p>Headlines</p>
         </div>
         <div class="col-md-4">
-          <a href="InnovationCloud/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/InnovationCloud.png" /></a>
+          <a href="InnovationCloud/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/InnovationCloud.png" alt="Innovation Cloud" /></a>
           <p>Innovation Cloud</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="Junction/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Junction.png" /></a>
+          <a href="Junction/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Junction.png" alt="Junction" /></a>
           <p>Junction</p>
         </div>
         <div class="col-md-4">
-          <a href="MOVE/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MOVE.png" /></a>
+          <a href="MOVE/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/MOVE.png" alt="MOVE" /></a>
           <p>MOVE</p>
         </div>
         <div class="col-md-4">
-          <a href="Newsroom/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Newsroom.png" /></a>
+          <a href="Newsroom/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Newsroom.png" alt="Newsroom" /></a>
           <p>NewsRoom</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="Pocketbook/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pocketbook.png" /></a>
+          <a href="Pocketbook/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Pocketbook.png" alt="Pocketbook" /></a>
           <p>Pocketbook</p>
         </div>
         <div class="col-md-4">
-          <a href="RedEyePhotography/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedEyePhotography.png" /></a>
+          <a href="RedEyePhotography/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedEyePhotography.png" alt="Red Eye Photography" /></a>
           <p>Red Eye Photography</p>
         </div>
         <div class="col-md-4">
-          <a href="Shutterbugg/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Shutterbugg.png" /></a>
+          <a href="Shutterbugg/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Shutterbugg.png" alt="Shutterbugg" /></a>
           <p>Shutterbugg</p>
         </div>
       </div>
@@ -124,37 +124,37 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" /></a>
+          <a href="CamperNews/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/CamperNews.png" alt="Camper News" /></a>
           <p>Camper News</p>
         </div>
         <div class="col-md-4">
-          <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" /></a>
+          <a href="Weather/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Weather.png" alt="Current Local Weather" /></a>
           <p>Current Local Weather</p>
         </div>
         <div class="col-md-4">
-          <a href="TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" /></a>
+          <a href="TwitchTV/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/TwitchTV.png" alt="Twitch TV" /></a>
           <p>Twitch TV Streamers</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" /></a>
+          <a href="JSCalculator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/JSCalculator.png" alt="JavaScript Calculator" /></a>
           <p>JavaScript Calculator</p>
         </div>
         <div class="col-md-4">
-          <a href="PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" /></a>
+          <a href="PomodoroTimer/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/PomodoroTimer.png" alt="Pomodoro Timer" /></a>
           <p>Pomodoro Timer</p>
         </div>
         <div class="col-md-4">
-          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" /></a>
+          <a href="QuoteGenerator/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QuoteGenerator.png" alt="Quote Generator" /></a>
           <p>Quote Generator</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" /></a>
+          <a href="Wikipedia/" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Wikipedia.png" alt="Wikipedia Search Engine" /></a>
           <p>Wikipedia Search Engine</p>
         </div>
       </div>
@@ -173,56 +173,56 @@
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_3wTHewyrusxK2Oh" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DuckHunt.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_3wTHewyrusxK2Oh" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DuckHunt.png" alt="Duck Hunt" /></a>
           <p>Duck Hunt</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0qgiRH7WiDPcY85" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_0qgiRH7WiDPcY85" target="_blank"><img class="img-responsive" src="Images/Thumbnails/QrappyBird.png" alt="Qrappy Bird" /></a>
           <p>Qrappy Bird</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe3/form/SV_bCb70NimhKVGTQx" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Mario.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe3/form/SV_bCb70NimhKVGTQx" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Mario.png" alt="Super Mario" /></a>
           <p>Super Mario</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_1XPigC1TkHGKoQd" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Piano.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_1XPigC1TkHGKoQd" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Piano.png" alt="Piano" /></a>
           <p>Piano</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_0JIvWm8RbmXt6gl" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Canvas.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_0JIvWm8RbmXt6gl" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Canvas.png" alt="Canvas Animation" /></a>
           <p>Canvas Animation</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_cOuJWi5eQMIVFbf" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Connect4.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_cOuJWi5eQMIVFbf" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Connect4.png" alt="Connect Four" /></a>
           <p>Connect Four</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_6eVuJ3bE4daIavb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DotChaser.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_6eVuJ3bE4daIavb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/DotChaser.png" alt="Dot Chaser" /></a>
           <p>Dot Chaser</p>
         </div>
         <div class="col-md-4">
-          <a href="https://social.az1.qualtrics.com/SE/?SID=SV_eM22ltCMYQg2WB7" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Dino.png" /></a>
+          <a href="https://social.az1.qualtrics.com/SE/?SID=SV_eM22ltCMYQg2WB7" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Dino.png" alt="Dinosaur Park Survey" /></a>
           <p>Dinosaur Park Survey</p>
         </div>
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_2gaDavqpxc50K0t" target="_blank"><img class="img-responsive" src="Images/Thumbnails/Squarexploder.png" alt="Squarexploder" /></a>
           <p>Squarexploder</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
-          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" /></a>
+          <a href="https://survey.qualtrics.com/jfe/form/SV_bkNEsCGIVKUrlNb" target="_blank"><img class="img-responsive" src="Images/Thumbnails/RedDot.png" alt="Click the Dot" /></a>
           <p>Click the Dot</p>
         </div>
         <div class="col-md-4">
-          <a href="GrowingBubbles.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" /></a>
+          <a href="GrowingBubbles.html" target="_blank"><img class="img-responsive" src="Images/Thumbnails/GrowingBubbles.png" alt="Growing Bubbles" /></a>
           <p>Growing Bubbles</p>
         </div>
       </div>
