--- a/Wikipedia/index.html
+++ b/Wikipedia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Wikipedia Viewer</title>
+		<title>Wikipedia Search Engine</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link href='//fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<h1>Wikipedia Viewer</h1>
+		<h1>Wikipedia Search Engine</h1>
 		<form id="searchForm" action="javascript:void(0);">
 			<input type="text" id="query" name="query" placeholder="Enter text here"/>
 			<input type="submit" id="search" name="search" value="Search" />
